--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   etcd:
-    image: gcr.io/etcd-development/etcd:v3.3.15-arm64
+    image: gcr.io/etcd-development/etcd:v3.3.15
     environment:
       ETCD_NAME: etcd0
       ETCD_INITIAL_ADVERTISE_PEER_URLS: http://etcd:2380
@@ -12,7 +12,12 @@ services:
     ports:
       - "2379:2379"
       - "2380:2380"
-
+    healthcheck:
+      test: ["CMD", "etcdctl", "cluster-health"]
+      interval: 10s
+      timeout: 20s
+      retries: 10
+    
   mysql:
     image: mysql:5.7
     platform: linux/amd64
@@ -21,13 +26,22 @@ services:
       MYSQL_DATABASE: ticketdb
       MYSQL_USER: user
       MYSQL_PASSWORD: password
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      timeout: 20s
+      retries: 10
     ports:
       - "3306:3306"
     volumes:
-      - db-data:/var/lib/mysql
+      - db-data
 
   redis:
     image: redis:latest
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 20s
+      retries: 10
     ports:
       - "6379:6379"
 
