--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
   mysql:
     image: mysql:5.7
     platform: linux/amd64
+    command: --init-file /data/application/init.sql
     environment:
       MYSQL_ROOT_PASSWORD: rootpassword
       MYSQL_DATABASE: ticketdb
@@ -34,6 +35,7 @@ services:
       - "3306:3306"
     volumes:
       - db-data:/var/lib/mysql
+      - ./init.sql:/data/application/init.sql
 
   redis:
     image: redis:latest
