--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,6 @@
 version: '3.8'
 
-services:
-  etcd:
-    image: gcr.io/etcd-development/etcd:v3.3.15
-    environment:
-      ETCD_NAME: etcd0
-      ETCD_INITIAL_ADVERTISE_PEER_URLS: http://etcd:2380
-      ETCD_INITIAL_CLUSTER: etcd0=http://etcd:2380
-      ETCD_ADVERTISE_CLIENT_URLS: http://etcd:2379
-      ETCD_LISTEN_CLIENT_URLS: http://0.0.0.0:2379
-    ports:
-      - "2379:2379"
-      - "2380:2380"
-    healthcheck:
-      test: ["CMD", "etcdctl", "cluster-health"]
-      interval: 10s
-      timeout: 20s
-      retries: 10
-    
+services: 
   mysql:
     image: mysql:5.7
     platform: linux/amd64
@@ -56,12 +39,107 @@ services:
       MYSQL_USER: user
       MYSQL_PASSWORD: password
       MYSQL_DB: ticketdb
-      ETCD_HOST: etcd
+      ETCD_HOST: nginx
       REDIS_HOST: redis
     depends_on:
       - mysql
-      - etcd
+      - nginx 
       - redis
 
+  etcd-00:
+    image: quay.io/coreos/etcd:v3.5.0
+    hostname: etcd-00
+    command:
+      - etcd
+      - --name=etcd-00
+      - --data-dir=data.etcd
+      - --advertise-client-urls=http://etcd-00:2379
+      - --listen-client-urls=http://0.0.0.0:2379
+      - --initial-advertise-peer-urls=http://etcd-00:2380
+      - --listen-peer-urls=http://0.0.0.0:2380
+      - --initial-cluster=etcd-00=http://etcd-00:2380,etcd-01=http://etcd-01:2380,etcd-02=http://etcd-02:2380
+      - --initial-cluster-state=new
+      - --initial-cluster-token=etcd-cluster-1
+    volumes:
+      - etcd-00vol:/data.etcd
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "1m"
+        max-file: "5"
+    restart: always
+
+  etcd-01:
+    image: quay.io/coreos/etcd:v3.5.0
+    hostname: etcd-01
+    command:
+      - etcd
+      - --name=etcd-01
+      - --data-dir=data.etcd
+      - --advertise-client-urls=http://etcd-01:2379
+      - --listen-client-urls=http://0.0.0.0:2379
+      - --initial-advertise-peer-urls=http://etcd-01:2380
+      - --listen-peer-urls=http://0.0.0.0:2380
+      - --initial-cluster=etcd-00=http://etcd-00:2380,etcd-01=http://etcd-01:2380,etcd-02=http://etcd-02:2380
+      - --initial-cluster-state=new
+      - --initial-cluster-token=etcd-cluster-1
+    volumes:
+      - etcd-01vol:/data.etcd
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "1m"
+        max-file: "5"
+    restart: always
+
+  etcd-02:
+    image: quay.io/coreos/etcd:v3.5.0
+    hostname: etcd-02
+    command:
+      - etcd
+      - --name=etcd-02
+      - --data-dir=data.etcd
+      - --advertise-client-urls=http://etcd-02:2379
+      - --listen-client-urls=http://0.0.0.0:2379
+      - --initial-advertise-peer-urls=http://etcd-02:2380
+      - --listen-peer-urls=http://0.0.0.0:2380
+      - --initial-cluster=etcd-00=http://etcd-00:2380,etcd-01=http://etcd-01:2380,etcd-02=http://etcd-02:2380
+      - --initial-cluster-state=new
+      - --initial-cluster-token=etcd-cluster-1
+    volumes:
+      - etcd-02vol:/data.etcd
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "1m"
+        max-file: "5"
+    restart: always
+
+  nginx:
+    image: nginx:alpine
+    hostname: nginx-etcd
+    volumes:
+      - type: bind
+        source: ./nginx/nginx.conf
+        target: /etc/nginx/nginx.conf
+    ports:
+      - 2379:2379
+    depends_on:
+      - etcd-00
+      - etcd-01
+      - etcd-02
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "1m"
+        max-file: "5"
+    restart: always
+
 volumes:
+  etcd-00vol:
+    driver: local
+  etcd-01vol:
+    driver: local
+  etcd-02vol:
+    driver: local
   db-data:
